--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -15,8 +15,8 @@
 <div>
   <h2>Add an event</h2>
     <form action="/event" method="post">
-       title: <input name="title" type="text" /> <br />
-       description: <input name="description" type="text" /> <br />
+       Title: <input name="title" type="text" /> <br />
+       Description: <input name="description" type="text" /> <br />
        Location: <input name="location" type="text" /> <br />
        <br />
         <input type="submit" name="submit" value="submit" />
